fix: font for cards and card input  now aligns

--- a/src/App.css
+++ b/src/App.css
@@ -117,29 +117,3 @@ h1 {
   justify-content: center;
   overflow: visible;
 }
-
-.ListCardDetails {
-  overflow: auto;
-  width: 250px;
-  padding: 10px;
-  margin: 10px;
-  margin-top: 5px;
-  background-color: white;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  border: none;
-  border-radius: 6px;
-  height: 64px;
-}
-
-textarea.ListCardDetailsInput {
-  outline: none;
-  border: none;
-  width: 230px;
-  background-color: white;
-  font-size: 15px;
-  overflow: hidden;
-  word-wrap: break-word;
-  resize: none;
-}
